--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sagittarius-ui/tokens",
+  "name": "@emerald-ui-ui/tokens",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
