--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
-  "module":"./dist/index.mjs",
-  "types":"./dist/index.d.ts",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@emerald-ui/tokens": "*",
+    "@emerald-ui/ts-config": "*",
     "tsup": "^8.2.4",
     "typescript": "^5.5.4"
   }
