--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -16,6 +16,7 @@
     "@emerald-ui/eslint-config": "*",
     "@emerald-ui/react": "*",
     "@emerald-ui/tokens": "*",
+    "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
