--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "turbo run build"
   },
   "devDependencies": {
+    "@storybook/addon-docs": "^8.2.8",
     "@storybook/builder-vite": "^8.2.7",
     "@storybook/react": "^8.2.7",
     "turbo": "^2.0.12",
