--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "dev": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook2": "storybook build",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "license": "MIT",
   "dependencies": {
@@ -31,6 +32,7 @@
     "@storybook/manager-api": "^8.2.7",
     "@storybook/react": "^8.2.7",
     "@storybook/react-vite": "^8.2.7",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/test": "^8.2.7",
     "@storybook/theming": "^8.2.7",
     "@types/react": "^18.3.3",
