--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -7,9 +7,8 @@
     "vite": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
     "dev": "storybook dev -p 6006",
-    "build-storybook2": "storybook build",
+    "build-storybook": "storybook build",
     "deploy-storybook": "storybook-to-ghpages"
   },
   "license": "MIT",
