--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "vite": "vite",
-    "build": "tsc -b && vite build",
+    "build-vite": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "dev": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
+    "build": "storybook build",
     "deploy-storybook": "storybook-to-ghpages"
   },
   "license": "MIT",
