--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "05-design-system",
+  "version": "1.0.0",
   "private": true,
   "workspaces": [
     "packages/*"
   ],
   "scripts": {
     "dev": "turbo run dev --parallel",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "turbo run build --filter=packages/docs & changeset publish"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.7",
     "@storybook/builder-vite": "^8.2.7",
     "@storybook/react": "^8.2.7",
     "turbo": "^2.0.12",
