ci: Add turboRepo cache on deploy build

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env:
+          TURBO_TOKEN: XjzJIQOnHnjCF8Bh0W4n5cfq
+          TURBO_TEAM: ageu-menezes-costas-projects
 
       - name: Deploy storybook
         working-directory: ./packages/docs
