--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@emerald-ui/tokens",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "publishConfig": {
+  "access": "public"
+  },
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
